[project]
name = "cu1nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org" }
]
requires-python = ">=3.11"
dependencies = [
    "cupy-cuda11x>=13.6.0", # just to avoid compiling
    "pylibcugraph-cu11>=25.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "napari",
    "edt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
