[project]
name = "cu1nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org" }
]
requires-python = ">=3.11"
dependencies = ["cupy"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "napari",
    "edt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://docs.astral.sh/ruff
[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 120

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
ignore = ["E712"]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]
